- If a very long string is selected, the Search and Replace dialog will
  not be unacceptably wide when 'Find' is invoked
- Fixed broken soft wrap in syntax highlighted files
- Made sure that all XML mode files now validate against the xmode.dtd
- Print jobs would be named 'true' (or 'false' if you were lucky)
- Fixed unprintable characters in the help table of contents

* Version 4.0pre4

Note that jEdit now has a source file, Java14.java, that only compiles
under Java 2 version 1.4. If you're using Java 2 version 1.3 and wish to
compile jEdit from source, you should comment out the "jdk14" property
in build.xml.

+ New Features

- Soft wrap.
  - Three wrapping modes are available:
    "none" - no wrapping is performed
    "soft" - soft wrap
    "hard" - this is the old hard wrap feature that has been available
    since jEdit 3.0.
  - Change the wrap mode in Global Options or Buffer Options
  - When soft wrap is enabled, you can set the 'Wrap margin' setting to
    zero to wrap to the width of the text area.
  - Some plugins will need to be updated; see below
- Two JDK 1.4-specific options added to 'Appearance' option pane:
  'Draw window borders using Swing look & feel', 'Draw dialog box
  borders using Swing look & feel'. Both are disabled by default.
- New 'Keyboard Tester' command in Utilities->Troubleshooting menu; it
  displays a 'grab key' dialog and dumps key events into a new buffer
- Option to split file dialogs vertically (Ollie Rutherfurd)
- Plugin manager's install plugins dialog box now shows plugin download
  sizes, and has a slightly improved look
- jEdit Frequently Asked Questions is now included in the online help
  (John Gellene)
- Prolog syntax highlighting (Giulio Piancastelli)

+ Enhancements

- Firewall plugin integrated into editor core
- Global Options dialog box now has an 'Overview' page
- Better GZIP file auto-detection; previously, jEdit would check for a
  filename extension of .gz, now it checks for the GZIP magic number at